* Prevent bosses from spawning in The Ravine or Checkpoint rooms, when bosses as enemies mode is enabled.
* Moved Spawn locations in Armor Xemnas 1 fight to prevent bosses getting softlocked by landing strangely on the throne
* Move Spawn location for Groundshaker in front of Sora and to ground level

2.1
* Redesigned "Wild" enemies to now only put up to 5 different kinds of enemies in any one room (between all spawns in that room), which should make it mostly playable. This number will be reduced if necessary, and Wild is still only possible for PC. Due to the way the randomization is currently implemented, some enemies will be very likely to be vanilla (for example, the Bolt Towers in the first part of the Minnie Escort fight)
* Increased the number of bosses available when Bosses are allowed to replace normal enemies, and increased the odds of a boss replacement occuring to about 1 in 80 enemies
* If Data Demyx is to be placed in either Groundshaker or Scar's location, he will be forced to normal Demyx.
* Disable the "nobady_call" attack for Armor Xemnas 1, which should prevent crashing on PC

2.0
* Full redesign of the backend, to make future updates easier
* PC is now be able to load cups when enemies are randomized
* Options to not randomize big and small enemies separately. Warning should only be used on PC and it is experimental and may cause crashes
* Options to not randomize melee and ranged enemies separately. Warning should only be used on PC and it is experimental and may cause crashes
* Option to randomize enemies independently of each other. Warning should only be used on PC and it is experimental and will probably cause crashes
* Beast is added into the randomization pool, when he appears cogsworth will also appear.
* More bosses can now replace the final 3 bosses of the game (previously bosses like luxord could not appear due to his msn requirement)